# adeu

./: .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  ARCHITECTURE.md  BUG_PARAGRAPH_MERGE.md  CONTRIBUTING.md  GEMINI.md  HANDOVER.md  QA_BUG_FIX_HANDOVER.md  QA_EXPLORATORY_REPORT.md  README.md  TODO.md  TODO_HANDOVER.md  cli.py  debug_rels.py  debug_structure.py  gemini-extension.json  inspect_test_docx.py  pyproject.toml  report.md  reproduce_issue.py  search_and_targeted_write.md  server.json  spec-comments.md  spec-fmt.md  spec-live-word.md  spec.md  test.py  test_multi_p_debug.py  test_multiline_insert.py  test_numbered_list.py
.claude-plugin/: marketplace.json
.gemini/: settings.json
.github/: dependabot.yml
desktop-extension/: index.js  manifest.json  package.json
docs/: MCP_APPS_PROTOCOL.md  MCP_AUTH_ARCHITECTURE.md  PUBLISHING.md  QA_ISSUES_DISCOVERED.md  TODO.md  cli-agent-spec.md  spec-comments.md  spec-finalization.md  spec-fmt.md  spec-table-edits.md  spec-undo-record.md
langchain/: .gitignore  LICENSE  Makefile  README.md  adeu.mdx  pyproject.toml
node/: package-lock.json  package.json  test.js  test.mjs
python/: .pre-commit-config.yaml  Dockerfile  README.md  out.docx  pyproject.toml  server.json  test_unicode.docx
scripts/: bump.py  check_release_consistency.mjs  debug_styles.py  debug_xml.py  disable_test_creator_mode.py  enable_test_creator_mode.py  patch_smithery_mcpb.py  publish_mcp_registry.ps1
tests/: conftest.py  repro_golden.py  test_atomic_batch_pipeline.py  test_batch_reliability.py  test_clean_view.py  test_cli_init.py  test_comment_xml_structure.py  test_comments.py  test_comments_reply.py  test_context_trimming.py  test_diff_logic.py  test_domain_appendix.py  test_domain_defined_terms.py  test_domain_internal_anchors.py  test_dry_run_validation.py  test_fixtures_verification.py  test_flat_opc_to_docx.py  test_formatting.py  test_fuzzy_matching.py  test_ingest_comments.py  test_live_word.py  test_live_word_structured_insertion.py  test_markup.py  test_markup_fixes.py  test_modern_comments.py  test_natural_diffs.py  test_nested_markdown.py  test_properties.py  test_regressions.py  test_repro_accept_data_loss.py  test_repro_batch_5.py  test_repro_batch_engine_accept_fake.py  test_repro_batch_engine_deletes_image.py  test_repro_batch_engine_edge_cases.py  (+60 more)
(+190 files in other folders)
