[project]
name = "adeu"
version = "0.6.5"
description = "Automated DOCX Redlining Engine"
authors = [
    { name = "Mikko Korpela" },
    { name = "Uzair Ahmed" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "diff-match-patch>=20230430",
    "mcp>=1.2.0",
]

[project.scripts]
adeu = "adeu.cli:main"
adeu-server = "adeu.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adeu"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "diff_match_patch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"